--- a/css/conocimientos.css
+++ b/css/conocimientos.css
@@ -19,6 +19,7 @@
 		.conocimientos-columna {
 			display: grid;
 			grid-template-rows: repeat(6, 1fr);
+			font-family: 'Indie Flower', cursive;
 		}
 
 			.conocimientos-elemento {
@@ -36,7 +37,7 @@
 					color: var(--color-white);
 					background-color: var(--color-secundario);
 
-					font-size: 0.8em;
+					font-size: 0.9em;
 					font-weight: 300;
 					}
 
