--- a/css/footer.css
+++ b/css/footer.css
@@ -6,6 +6,8 @@
 
 	position: relative;
 	z-index: 0;
+	font-family: 'Abril Fatface', cursive;
+	text-decoration: none;
 }
 
 	.footer-agradecimientos,
@@ -16,6 +18,7 @@
 
 		font-weight: 300;
 		line-height: 3em;
+		text-decoration: none;
 	}
 
 	.footer-agradecimientos img {
@@ -25,7 +28,9 @@
 
 	.footer-dedicatoria {
 		text-align: right;
+		text-decoration: none;
 	}
 	.footer-dedicatoria a {
 		color: var(--color-white);
+		text-decoration: none;
 	}
