--- a/css/portafolio.css
+++ b/css/portafolio.css
@@ -14,10 +14,11 @@ img{
 		margin: 0 var(--espaciado-muy-alto) var(--espaciado-normal);
 		box-shadow: var(--box-shadow);
 		border-radius: var(--border-radius);
-		background-color: rgb(216, 250, 241);
-		display: grid;
-		grid-template-columns: 1fr 1fr;
+		background-color: rgb(119, 170, 204);
+		display: flex;
+		justify-content: center;
 		border-radius: 10px;
+		
 		
 	}
 	.portafolio-proyecto:last-of-type {
@@ -29,17 +30,24 @@ img{
 			margin: var(--espaciado-normal);
 			color: var(--color-gray);
 			font-weight: 500;
+			display:flex;
+			flex-direction: column;
+			justify-content: center;
+			align-content: center;
+			align-items: center;
+			font-family: 'Anton', sans-serif;
 		}
 
 			.informacion-titulo {
 				margin: 0;
 				font-size: 2em;
+				font-family: 'Anton', sans-serif;
 			}
 
 			.informacion-subtitulo {
 				margin: .8em 0;
 				font-size: 0.9em;
-				color: var(--color-lightgray)
+				/* color: var(--color-lightgray) */
 			}
 
 			.informacion-fecha, .informacion-link {
@@ -48,10 +56,10 @@ img{
 				font-weight: 500;
 				
 			}
-			.informacion-fecha span,
+			/* .informacion-fecha span,
 			.informacion-link a {
 				color: var(--color-lightgray)
-			}
+			} */
 
 			.informacion-descripcion {
 				margin: 1.6em 0 0;
