--- a/css/experiencias.css
+++ b/css/experiencias.css
@@ -19,7 +19,7 @@
 	}
 
 		.galeria-experiencia {
-			background-color:  rgb(93, 169, 255);;
+			background-color:  rgb(192, 195, 202);
 			border-radius: var(--border-radius);
 			box-shadow: var(--box-shadow);
 			overflow: hidden;
@@ -45,7 +45,7 @@
 		}
 			.contenido-titulo {
 					margin: 0;
-					margin-bottom: 1em;
+					margin-bottom: 0em;
 					font-size: 3.0em;
 					text-align: center;
 					opacity: 0.8;
@@ -56,7 +56,7 @@
 			.contenido-descripcion {
 					margin: 0;
 					margin-bottom: 1.5em;
-					color: var(--color-lightgray);
+					color:  rgb(0, 0, 0);
 					font-size: 1.1em;
 					font-weight: 400;
 					letter-spacing: 0.02em;
